# actions

./: .gitignore  Cargo.toml  Secrets.toml  Shuttle.toml
entity/: Cargo.toml
entity/src/: category.rs  comment.rs  comment_dislikes.rs  comment_likes.rs  favorites.rs  lib.rs  prelude.rs  session.rs  tag.rs  template.rs  template_downloads.rs  template_history.rs  template_tag.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240321_123642_template.rs  m20240321_123731_template_history.rs  m20240321_123743_template_downloads.rs  m20240321_123823_comment_likes.rs  m20240321_123836_comment_dislikes.rs
server/: Cargo.toml
server/src/: app_state.rs  error.rs  jwt.rs  lib.rs  main.rs
server/src/auth/: handler.rs  mod.rs
server/src/graphql/: auth_guard.rs  mod.rs
server/src/graphql/mutation/: actions.rs  mod.rs
server/src/graphql/query/: mod.rs  user.rs
server/src/middlewares/: claims.rs
server/src/service/: mod.rs  session.rs  user.rs
