[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.14", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "postgres-array",
] }
serde = { version = "1.0.197", features = ["derive"] }
async-graphql = { version = "7.0.2", features = ["chrono"] }