[package]
name = "axtions"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio"] }
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
shuttle-shared-db = { version = "0.39.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.3"
tokio = "1.28.2"
tracing = "0.1.40"
