[package]
name = "actions"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
axum = "0.7.3"
axum_session = "0.12.4"
oauth2 = "4.4.2"
reqwest = { version = "0.11.24", features = ["json"] }
sea-orm = { version = "0.12.14", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
shuttle-secrets = "0.39.0"
shuttle-shared-db = { version = "0.39.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.3"
tokio = "1.28.2"
tracing = "0.1.40"
migration = { path = "../migration" }
axum-extra = { version = "0.9.2", features = ["cookie-private", "typed-header", "cookie"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
entity = { path = "../entity" }
chrono = { version = "0.4.34", features = ["serde"] }
jsonwebtoken = "9.2.0"
async-graphql = { version = "7.0.2", features = ["chrono"] }
async-graphql-axum = "7.0.2"
cookie = "0.18.0"

